# dna_transcriptor

./: CMakeLists.txt  codone.h  codone_describer.h  codone_descriptor.h  domain.h  log_duration.h  main.cpp  nucleotide.h  sequence.h  validation.h
tests/: codone.h  details.h  nucleotide.h  sequence.h  test_lambda.h  tests.h
